# OxiDB

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  Package.swift  README.md  TODO.md  docker-compose.yml
.github/workflows/: build-windows.yml
OxiDMS/: Dockerfile  docker-compose.yml  go.mod  go.sum  main.go
OxiDMS/frontend/: index.html  package-lock.json  package.json  vite.config.ts
OxiDMS/frontend/src/: App.tsx
OxiDMS/internal/auth/: jwt.go  middleware.go
OxiDMS/internal/config/: config.go
OxiDMS/internal/db/: db.go
OxiDMS/internal/gelf/: gelf.go
OxiDMS/internal/handler/: admin_handler.go  auth_handler.go  dashboard_handler.go  document_handler.go  form_handler.go  helpers.go  search_handler.go  submission_handler.go
OxiDMS/internal/middleware/: cors.go  logger.go  recovery.go
OxiDMS/internal/models/: document.go  form.go  submission.go  user.go
OxiDMS/internal/repository/: document_repo.go  form_repo.go  helpers.go  submission_repo.go  user_repo.go
OxiDMS/internal/router/: router.go
OxiDMS/internal/service/: auth_service.go  document_service.go  form_service.go  search_service.go  submission_service.go
benchmarks/: bench_1m.py
docs/: README.md  aggregation.md  blobs.md  client-libraries.md  getting-started.md  indexes.md  protocol-reference.md  queries.md  scheduler.md  server.md  sql.md  stored-procedures.md  transactions.md  updates.md  vector-search.md
dotnet/: OxiDb.sln
dotnet/OxiDb.Benchmark/: OxiDb.Benchmark.csproj  Program.cs
dotnet/OxiDb.Client/: Filter.cs  NativeInterop.cs  OxiDbClient.cs  README.md  UpdateDef.cs
dotnet/OxiDb.Tests/: OxiDb.Tests.csproj  Program.cs
examples/: demo.rs
examples/dotnet/OxiDb.IntegrationTests/: FullIntegrationTests.cs  OxiDbClient.cs  TestServerFixture.cs
examples/go_full_api/: go.mod  main.go
examples/go_insert_1m/: main.go
examples/ios/OxiDBDemo/: README.md
examples/julia/: Project.toml  README.md  benchmark_1m.jl  embedded_example.jl  example.jl
examples/python/: memory_stress_test.py  remote_demo.py  test_collection_lifecycle.py  test_crash_recovery.py  test_encryption.py  test_occ_and_integrity.py  test_vector.py
examples/spring-boot/: pom.xml
go/oxidb/: README.md  client.go  client_bulk_test.go  client_test.go  errors.go  go.mod
julia/OxiDb/: Project.toml  README.md
julia/OxiDb/src/: OxiDb.jl
julia/OxiDb/test/: runtests.jl
julia/OxiDbEmbedded/: .gitignore  Project.toml
oxidb-app/: index.html  package-lock.json  package.json
oxidb-app/src/: App.tsx
oxidb-app/src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
oxidb-app/src-tauri/capabilities/: default.json
oxidb-app/src-tauri/src/: lib.rs  main.rs  state.rs
oxidb-app/src-tauri/src/commands/: aggregation.rs  blobs.rs  collections.rs  connection.rs  dashboard.rs  documents.rs  indexes.rs  mod.rs  query.rs  transactions.rs
oxidb-cli/: Cargo.toml
oxidb-cli/src/: display.rs  executor.rs  main.rs  parser.rs
oxidb-client-ffi/: Cargo.toml
oxidb-client-ffi/include/: oxidb.h
oxidb-client-ffi/src/: connection.rs  lib.rs
oxidb-embedded-ffi/: Cargo.toml
oxidb-embedded-ffi/include/: oxidb_embedded.h
oxidb-embedded-ffi/src/: lib.rs
oxidb-server/: Cargo.toml
oxidb-server/src/: async_protocol.rs  async_server.rs  audit.rs  auth.rs  gelf.rs  handler.rs  lib.rs  main.rs  protocol.rs  rbac.rs  scram.rs  session.rs  tls.rs
oxidb-server/src/raft/: config.rs  log_store.rs  management.rs  mod.rs  network.rs  state_machine.rs  types.rs
oxidb-server/tests/: acid_test.rs  handler_test.rs  raft_test.rs  security_test.rs
oxidb-spring-boot-starter/: README.md  pom.xml
php/: README.md  composer.json
php/src/: OxiDbClient.php  OxiDbException.php  TransactionConflictException.php
php/tests/: OxiDbClientTest.php
python/: README.md  oxidb.py  test_acid.py
ruby/: README.md  oxidb.gemspec
ruby/lib/: oxidb.rb
ruby/test/: test_oxidb.rb
src/: blob.rs  change_stream.rs  codec.rs  collection.rs  crypto.rs  document.rs  engine.rs  error.rs  fts.rs  index.rs  index_persist.rs  lib.rs  pipeline.rs  query.rs  scheduler.rs  sql.rs  storage.rs  transaction.rs  tx_log.rs  update.rs  value.rs  vector.rs  wal.rs
swift/: README.md
swift/OxiDB/: Package.swift
tests/cluster/: bench_3node.py  docker-compose.3node.yml  docker-compose.cluster.yml  haproxy-3node.cfg  haproxy.cfg  run.sh  run_bench.sh  test_3node.py  test_cluster.py
web/: package.json
web/client/: index.html  package.json
web/indexer/: cli.js  oxidb.js  package.json  worker.js
web/server/: content-types.js  index.js  oxidb.js  package.json  routes.js  worker.js
(+87 files in other folders)
