[workspace]
members = [".", "oxidb-server", "oxidb-client-ffi"]
resolver = "3"

[package]
name = "oxidb"
version = "0.1.0"
edition = "2024"
description = "A fast document database engine with optimized date indexing"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
crc32fast = "1"

[dev-dependencies]
tempfile = "3"

[[example]]
name = "demo"
path = "examples/demo.rs"
