[workspace]
members = [".", "oxidb-server", "oxidb-client-ffi"]
resolver = "3"

[package]
name = "oxidb"
version = "0.1.0"
edition = "2024"
description = "A fast document database engine with optimized date indexing"

[features]
default = []
ocr = ["leptess"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
crc32fast = "1"
zip = "2"
pdf-extract = "0.7"
leptess = { version = "0.14", optional = true }

[dev-dependencies]
tempfile = "3"

[[example]]
name = "demo"
path = "examples/demo.rs"
