[package]
name = "oxidb-server"
version = "0.1.0"
edition = "2024"
description = "TCP server for OxiDB document database"

[features]
default = []
ocr = ["oxidb/ocr"]

[dependencies]
oxidb = { path = ".." }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
rustls = "0.23"
rustls-pemfile = "2"
argon2 = "0.5"
sha2 = "0.10"
hmac = "0.12"
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
