[package]
name = "oxidb-app"
version = "0.1.0"
edition = "2024"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
oxidb = { path = "../.." }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"

[lib]
name = "oxidb_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
